crates/pardosa-schema/tests/compile_fail/ref_bytes_genome_safe.rs
use pardosa_schema::GenomeSafe;
fn main() {
    let _ = <&[u8] as GenomeSafe>::SCHEMA_HASH;
}
